<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="activity"
            type="com.lenganngoh.digiwallet.ui.menu.MenuActivity" />

        <variable
            name="wallet"
            type="com.lenganngoh.digiwallet.data.model.Wallet" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-20dp"
            android:animateLayoutChanges="true"
            android:visibility="visible"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="20dp"
            app:cardElevation="15dp"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_default" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:animateLayoutChanges="true"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/eloquia_bold"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="40sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btn_demo1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_menu_button"
                    android:fontFamily="@font/eloquia_bold"
                    android:onClick="onButtonClick"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/str_demo1"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_transaction_label" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btn_demo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_menu_button"
                    android:fontFamily="@font/eloquia_bold"
                    android:onClick="onButtonClick"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/str_demo2"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_transaction_label" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btn_demo3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_menu_button"
                    android:fontFamily="@font/eloquia_bold"
                    android:onClick="onButtonClick"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/str_demo3"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_transaction_label" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_menu_button"
                    android:fontFamily="@font/eloquia_bold"
                    android:onClick="onButtonClick"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/str_go_back_menu"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_transaction_label" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="110dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/eloquia_bold"
                        android:gravity="start"
                        android:text="@string/str_wallets"
                        android:textColor="@color/black"
                        android:textSize="30sp" />

                    <LinearLayout
                        android:id="@+id/error_wallet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:onClick="onTapWalletClick"
                        android:visibility="gone">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center_vertical|start"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="3dp"
                            android:src="@drawable/ic_warning"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/text_wallet_name" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/eloquia_light"
                            android:text="@{@string/str_error_msg_format(@string/str_wallet)}"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            app:autoSizeMaxTextSize="12sp"
                            app:autoSizeMinTextSize="8sp"
                            app:autoSizeStepGranularity="0.5sp"
                            app:autoSizeTextType="uniform" />
                    </LinearLayout>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_wallets"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/eloquia_bold"
                        android:gravity="start"
                        android:text="@string/str_history"
                        android:textColor="@color/black"
                        android:textSize="30sp" />

                    <LinearLayout
                        android:id="@+id/error_history"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:onClick="onTapHistoryClick"
                        android:visibility="gone">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center_vertical|start"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="3dp"
                            android:src="@drawable/ic_warning"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/text_wallet_name" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/eloquia_light"
                            android:text="@{@string/str_error_msg_format(@string/str_history)}"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            app:autoSizeMaxTextSize="12sp"
                            app:autoSizeMinTextSize="8sp"
                            app:autoSizeStepGranularity="0.5sp"
                            app:autoSizeTextType="uniform" />
                    </LinearLayout>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:nestedScrollingEnabled="true" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </FrameLayout>
</layout>